--- a/aboutus.html
+++ b/aboutus.html
@@ -2,40 +2,42 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About | Suren</title>
     <link rel="stylesheet" href="suren.css">
 </head>
 <body>
 
+<!-- NAVBAR -->
 <nav>
     <h2>Welcome to <span>My Profile</span></h2>
     <ul>
-        <li><a href="home.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="portofolio.html">Portfolio</a></li>
-        <li><a href="aboutus.html">About</a></li>
+        <li><a href="aboutus.html" class="active">About</a></li>
         <li><a href="contact.html">Contact</a></li>
     </ul>
 </nav>
 
+<!-- ABOUT SECTION -->
 <section class="about-us">
     <div class="about-container">
-
+        <!-- Slider otomatis -->
         <div class="slider">
-            <img id="sliderImage" src="suren01.JPG" alt="About Suren">
+            <img id="sliderImage" src="suren04.JPG" alt="slider image">
         </div>
 
         <div class="about-content">
-            <h2>How This Story Began</h2>
+            <h2>How This Start Begin</h2>
             <p>
-                Photography has always been my way of capturing emotions and moments.
-                Every photo tells a story, every frame holds a memory.
+                Since I was a boy, photography has always been my passion.
+                I started capturing moments that tell stories and emotions.
             </p>
-            <button>SEE MORE</button>
         </div>
-
     </div>
 </section>
 
+<!-- FOOTER -->
 <footer>
     <p>© 2026 Suren Photography</p>
 </footer>
