--- a/portofolio.html
+++ b/portofolio.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio | Suren</title>
     <link rel="stylesheet" href="suren.css">
 </head>
@@ -10,8 +11,8 @@
 <nav>
     <h2>Welcome to <span>My Profile</span></h2>
     <ul>
-        <li><a href="home.html">Home</a></li>
-        <li><a href="portofolio.html">Portfolio</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="portofolio.html" class="active">Portfolio</a></li>
         <li><a href="aboutus.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
     </ul>
@@ -19,11 +20,12 @@
 
 <section class="portfolio">
     <h2>My Portfolio</h2>
-
     <div class="portfolio-grid">
         <img src="suren04.JPG" alt="">
         <img src="suren08.JPG" alt="">
         <img src="suren05.JPG" alt="">
+        <img src="suren07.JPG" alt="">
+        <img src="suren09.JPG" alt="">
     </div>
 </section>
 
@@ -31,6 +33,6 @@
     <p>© 2026 Suren Photography</p>
 </footer>
 
-<script src="suren.js"></script>
 </body>
 </html>
+
