Modify index.html for navigation and hero section
Updated navigation links and changed button to a link.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <nav>
     <h2>Welcome to <span>My Profile</span></h2>
     <ul>
-        <li><a href="home.html">Home</a></li>
-        <li><a href="portofolio.html">Portfolio</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="aboutus.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
     </ul>
@@ -21,7 +21,7 @@
     <div class="hero-text">
         <h1>I Am <span>Suren</span></h1>
         <p>Capturing Moments, Creating Memories.</p>
-        <button>TAKE A SHOT</button>
+        <a href="portfolio.html" class="btn">TAKE A SHOT</a>
     </div>
 
     <div class="hero-img">
@@ -33,6 +33,5 @@
     <p>© 2026 Suren Photography</p>
 </footer>
 
-<script src="suren.js"></script>
 </body>
 </html>
