--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h2>Welcome to <span>My Profile</span></h2>
     <ul>
         <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="portofolio.html">Portfolio</a></li>
         <li><a href="aboutus.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
     </ul>
@@ -21,7 +21,7 @@
     <div class="hero-text">
         <h1>I Am <span>Suren</span></h1>
         <p>Capturing Moments, Creating Memories.</p>
-        <a href="portfolio.html" class="btn">TAKE A SHOT</a>
+        <a href="portofolio.html" class="btn">TAKE A SHOT</a>
     </div>
 
     <div class="hero-img">
@@ -35,3 +35,4 @@
 
 </body>
 </html>
+
