--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     <h2>Welcome to <span>My Profile</span></h2>
     <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="portofolio.html">Portfolio</a></li>
         <li><a href="aboutus.html">About</a></li>
         <li><a href="contact.html" class="active">Contact</a></li>
     </ul>
@@ -65,3 +65,4 @@
 <script src="suren.js"></script>
 </body>
 </html>
+
