Fix HTML structure and update image alt text

--- a/aboutus.html
+++ b/aboutus.html
@@ -8,7 +8,6 @@
 </head>
 <body>
 
-<!-- NAVBAR -->
 <nav>
     <h2>Welcome to <span>My Profile</span></h2>
     <ul>
@@ -19,12 +18,11 @@
     </ul>
 </nav>
 
-<!-- ABOUT SECTION -->
 <section class="about-us">
     <div class="about-container">
-        <!-- Slider otomatis -->
+
         <div class="slider">
-            <img id="sliderImage" src="suren04.JPG" alt="slider image">
+            <img src="suren04.JPG" alt="About image">
         </div>
 
         <div class="about-content">
@@ -34,10 +32,10 @@
                 I started capturing moments that tell stories and emotions.
             </p>
         </div>
+
     </div>
 </section>
 
-<!-- FOOTER -->
 <footer>
     <p>© 2026 Suren Photography</p>
 </footer>
