--- a/index.html
+++ b/index.html
@@ -1,38 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>I Am Suren | Home</title>
-    <link rel="stylesheet" href="suren.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>LensbySuren | Photographer</title>
+<link rel="stylesheet" href="suren.css">
 </head>
 <body>
 
-<nav>
-    <h2>Welcome to <span>My Profile</span></h2>
-    <ul>
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="portofolio.html">Portfolio</a></li>
-        <li><a href="aboutus.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-    </ul>
+<nav class="navbar">
+  <h2>Lensby<span>Suren</span></h2>
+  <ul>
+    <li><a class="active" href="index.html">Home</a></li>
+    <li><a href="portofolio.html">Portfolio</a></li>
+    <li><a href="aboutus.html">About</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
 </nav>
 
+<!-- HOME / HERO -->
 <section class="hero">
-    <div class="hero-text">
-        <h1>I Am <span>Suren</span></h1>
-        <p>Capturing Moments, Creating Memories.</p>
-        <a href="portofolio.html" class="btn">TAKE A SHOT</a>
+  <div class="hero-content">
+
+    <h1>
+      Visual Storytelling<br>
+      <span>LensbySuren</span>
+    </h1>
+
+    <p>
+      Professional photography capturing emotions,
+      moments, and timeless stories.
+    </p>
+
+    <div class="hero-buttons">
+      <a href="portofolio.html" class="btn primary">My Work</a>
+      <a href="contact.html" class="btn outline">Contact Me</a>
     </div>
 
-    <div class="hero-img">
-        <img src="suren06.JPG" alt="Hero Image">
-    </div>
+  </div>
 </section>
 
-<footer>
-    <p>© 2026 Suren Photography</p>
-</footer>
+<footer>© 2026 LensbySuren</footer>
 
 </body>
 </html>
-
