--- a/portofolio.html
+++ b/portofolio.html
@@ -1,38 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio | Suren</title>
-    <link rel="stylesheet" href="suren.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio | LensbySuren</title>
+  <link rel="stylesheet" href="suren.css">
 </head>
 <body>
 
-<nav>
-    <h2>Welcome to <span>My Profile</span></h2>
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="portofolio.html" class="active">Portfolio</a></li>
-        <li><a href="aboutus.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-    </ul>
+<nav class="navbar">
+  <h2>Lensby<span>Suren</span></h2>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a class="active" href="portfolio.html">Portfolio</a></li>
+    <li><a href="aboutus.html">About</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
 </nav>
 
 <section class="portfolio">
-    <h2>My Portfolio</h2>
-    <div class="portfolio-grid">
-        <img src="suren04.JPG" alt="">
-        <img src="suren08.JPG" alt="">
-        <img src="suren05.JPG" alt="">
-        <img src="suren07.JPG" alt="">
-        <img src="suren09.JPG" alt="">
+  <div class="portfolio-layout">
+
+    <!-- IMAGE -->
+    <div class="portfolio-image">
+      <img id="portfolioImg" alt="LensbySuren Work">
     </div>
+
+    <!-- TEXT -->
+    <div class="portfolio-caption">
+      <h3 id="portfolioTitle"></h3>
+      <p id="portfolioDesc"></p>
+      <button class="btn" id="seeMoreBtn" onclick="toggleDesc()">SEE MORE</button>
+    </div>
+
+  </div>
 </section>
 
-<footer>
-    <p>© 2026 Suren Photography</p>
-</footer>
-
+<script src="suren.js"></script>
 </body>
 </html>
-
